--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             >
           </li>
           <li>
-            <a href="https://www.youtube.com/" class="icon brands fa-youtube"
+            <a href="https://www.youtube.com/@adminfixmyrig" class="icon brands fa-youtube"
               ><span class="label">YouTube</span></a
             >
           </li>
