--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             >
           </li>
           <li>
-            <a href="https://www.linkedin.com/" class="icon brands fa-linkedin"
+            <a href="www.linkedin.com/in/fixmyrig-tech-997673370" class="icon brands fa-linkedin"
               ><span class="label">LinkedIn</span></a
             >
           </li>
