--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           </li>
           <li>
             <a
-              href="https://x.com/"
+              href="https://x.com/fixmyrig_tech"
               class="icon brands fa-x-twitter"
               style="font-size: 28px"
               ><span class="label">X</span></a
