--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <li>
             <a
               href="https://x.com/fixmyrig_tech"
-              class="icon brands fa-x-twitter"
+              class="fab-brands fa-x-twitter"
               style="font-size: 28px"
               ><span class="label">X</span></a
             >
