--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body class="is-preload">
@@ -133,7 +134,7 @@
           <li>
             <a
               href="https://x.com/fixmyrig_tech"
-              class="fab-brands fa-x-twitter"
+              class="fa-brands fa-x-twitter fa-2x"
               style="font-size: 28px"
               ><span class="label">X</span></a
             >
