--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <li>
             <a
               href="https://x.com/fixmyrig_tech"
-              class="fa-brands fa-x-twitter"
+              class="icon brands fa-x-twitter"
               style="font-size: 28px"
               ><span class="label">X</span></a
             >
