--- a/resources.html
+++ b/resources.html
@@ -62,12 +62,12 @@
     <main>
       <section class="pdf-links">
         <h2>Downloadable PDFs</h2>
-        <a href="docs/terms-of-service.pdf" download>Terms of Service (PDF)</a>
-        <a href="docs/warrant-policy.pdf" download
+        <a href="docs/terms_of_service.pdf" download>Terms of Service (PDF)</a>
+        <a href="docs/limited_warrant_policy.pdf" download
           >Limited Warranty Policy (PDF)</a
         >
-        <a href="docs/privacy-policy.pdf" download>Privacy Policy (PDF)</a>
-        <a href="docs/repair-authorization.pdf" download
+        <a href="docs/privacy_policy.pdf" download>Privacy Policy (PDF)</a>
+        <a href="docs/repair_authorization_form.pdf" download
           >Repair Authorization Form (PDF)</a
         >
         <p><small>All documents last updated: June 2025</small></p>
