--- a/resources.html
+++ b/resources.html
@@ -86,7 +86,7 @@
           </li>
         </ul>
         <p>
-          <a href="docs/terms-of-service.pdf" download
+          <a href="docs/terms_of_service.pdf" download
             >View full Terms of Service</a
           >
         </p>
@@ -101,7 +101,7 @@
             Warranty void if third parties tamper with the device post-repair.
           </li>
           <p>
-            <a href="docs/warrant-policy.pdf" download>Read warranty policy</a>
+            <a href="docs/limited_warrant_policy.pdf" download>Read warranty policy</a>
           </p>
         </ul>
       </section>
@@ -113,7 +113,7 @@
           <li>We don't store or share your data unless legally required.</li>
         </ul>
         <p>
-          <a href="docs/privacy-policy.pdf" download
+          <a href="docs/privacy_policy.pdf" download
             >Read full privacy policy</a
           >
         </p>
@@ -126,7 +126,7 @@
           to repair.
         </p>
         <p>
-          <a href="docs/repair-authorization.pdf" download
+          <a href="docs/repair_authorization_form.pdf" download
             >Download Repair Form</a
           >
         </p>
