--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <ul class="icons">
           <li>
             <a
-              href="https://www.Instagram.com/"
+              href="https://www.instagram.com/fixmyrig.tech/"
               class="icon brands fa-instagram"
               ><span class="label">Instagram</span></a
             >
