--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
                     rows="4"
                   ></textarea>
                 </div>
+		<div>
+			<button class="actions" type="submit">Book Now</button>	
+		</div>
               </div>
             </form>
             <ul class="actions">
