--- a/index.html
+++ b/index.html
@@ -83,11 +83,9 @@
                     rows="4"
                   ></textarea>
                 </div>
-		<div>
-			<button class="actions" type="submit">Book Now</button>	
-		</div>
               </div>
             </form>
+	    <div id="response-message" style="margin-top: 20px; font-weight: bold;"></div>
             <ul class="actions">
               <li id="submitBtn"><input type="submit" value="Book Now" /></li>
             </ul>
