--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
     </footer>
 
     <!-- Scripts -->
+    <script src="assets/js/booknow.js"></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.poptrox.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
