--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
               </div>
             </form>
-	    <div id="response-message" style="margin-top: 20px; font-weight: bold;"></div>
+	    <div id="response-message" style="margin-top: 20px; margin-bottom: 20px; font-weight: bold;"></div>
             <ul class="actions">
               <li id="submitBtn"><input type="submit" value="Book Now" /></li>
             </ul>
