--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </form>
 	    <div id="response-message" style="margin-top: 20px; margin-bottom: 20px; font-weight: bold;"></div>
             <ul class="actions">
-              <li id="submitBtn"><input type="submit" value="Book Now" /></li>
+              <li><input type="submit" id="submitBtn" value="Book Now" /></li>
             </ul>
             <div style="text-align: right">
               <a href="resources.html"><em>Resources</em></a>
