--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </ul>
         <ul class="copyright">
           <li>@ 2025</li>
-          <li><sup>&copy;</sup> FixMyRig.tech</li>
+          <li>&copy; FixMyRig.tech</li>
           <li>All Rights Reserved</li>
         </ul>
       </div>
@@ -170,3 +170,4 @@
     
   </body>
 </html>
+
