--- a/resources.html
+++ b/resources.html
@@ -122,7 +122,7 @@
       <section>
         <h2>Repair Authorization Form</h2>
         <p>
-          All repairs reuire a signed form confirming ownership and permission
+          All repairs require a signed form confirming ownership and permission
           to repair.
         </p>
         <p>
@@ -143,5 +143,6 @@
     </footer>
   </boby>
 </html>
+
 
 
