--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </p>
         <div class="row">
           <div class="col-8 col-12-small">
-            <form id="contact-form" action="https://formspree.io/f/manbqzol" method="post">
+            <form id="contact-form" action="https://formspree.io/f/manbqzol" method="POST">
               <div class="row gtr-uniform gtr-50">
                 <div class="col-6 col-12-xsmall">
                   <input type="text" name="name" id="name" placeholder="Name" />
@@ -170,4 +170,5 @@
     
   </body>
 </html>
+
 
