--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="col-8 col-12-small">
             <form
               id="contact-form"
-              action="https://formspree.io/f/manbqzol"
+              action="https://formspree.io/f/mnnzlyee"
               method="POST"
             >
               <div class="row gtr-uniform gtr-50">
@@ -203,3 +203,4 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
